--- a/EtermaxExam/RedditPostTableViewCell.xib
+++ b/EtermaxExam/RedditPostTableViewCell.xib
@@ -1,18 +1,87 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="RedditPostTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="119" id="KGk-i7-Jjw" customClass="RedditPostTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="380" height="119"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="380" height="118"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="v7w-On-2bd">
+                        <rect key="frame" x="16" y="16" width="86" height="86"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="v7w-On-2bd" secondAttribute="height" multiplier="1:1" id="1Aj-V5-b0L"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ON2-Xt-IVY">
+                        <rect key="frame" x="110" y="16" width="38" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fecha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tRv-1w-AtU">
+                        <rect key="frame" x="110" y="45" width="40" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1w0-SB-dPe">
+                        <rect key="frame" x="158" y="45" width="67" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subredit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sr5-p3-CqU" userLabel="Comments Label">
+                        <rect key="frame" x="110" y="70" width="55" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subredit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="atz-tg-JDt" userLabel="Subredit Label">
+                        <rect key="frame" x="173" y="70" width="55" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="ON2-Xt-IVY" secondAttribute="trailing" constant="8" id="1us-g8-kwh"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="v7w-On-2bd" secondAttribute="bottom" constant="8" id="2nb-fn-YDQ"/>
+                    <constraint firstItem="v7w-On-2bd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="AEx-wE-vG8"/>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="sr5-p3-CqU" secondAttribute="bottom" constant="8" id="B39-nU-buW"/>
+                    <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="atz-tg-JDt" secondAttribute="trailing" constant="8" id="BQn-3W-ZFl"/>
+                    <constraint firstItem="ON2-Xt-IVY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="Cef-7k-lhg"/>
+                    <constraint firstItem="ON2-Xt-IVY" firstAttribute="leading" secondItem="v7w-On-2bd" secondAttribute="trailing" constant="8" id="IZV-5s-xae"/>
+                    <constraint firstItem="v7w-On-2bd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="TvC-YE-tVs"/>
+                    <constraint firstItem="1w0-SB-dPe" firstAttribute="leading" secondItem="tRv-1w-AtU" secondAttribute="trailing" constant="8" id="gBq-pk-t0N"/>
+                    <constraint firstItem="atz-tg-JDt" firstAttribute="baseline" secondItem="sr5-p3-CqU" secondAttribute="baseline" id="n7h-u4-WIY"/>
+                    <constraint firstItem="sr5-p3-CqU" firstAttribute="leading" secondItem="v7w-On-2bd" secondAttribute="trailing" constant="8" id="ojW-kg-wt6"/>
+                    <constraint firstItem="tRv-1w-AtU" firstAttribute="top" secondItem="ON2-Xt-IVY" secondAttribute="bottom" constant="8" id="qRi-tJ-2nL"/>
+                    <constraint firstItem="atz-tg-JDt" firstAttribute="leading" secondItem="sr5-p3-CqU" secondAttribute="trailing" constant="8" id="r44-os-DKo"/>
+                    <constraint firstItem="sr5-p3-CqU" firstAttribute="top" secondItem="tRv-1w-AtU" secondAttribute="bottom" constant="8" id="sfx-SA-KSk"/>
+                    <constraint firstItem="1w0-SB-dPe" firstAttribute="baseline" secondItem="tRv-1w-AtU" secondAttribute="baseline" id="skh-1V-sSP"/>
+                    <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="1w0-SB-dPe" secondAttribute="trailing" constant="8" id="t8W-H8-k48"/>
+                    <constraint firstItem="tRv-1w-AtU" firstAttribute="leading" secondItem="v7w-On-2bd" secondAttribute="trailing" constant="8" id="ycW-sp-UGA"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="commentsLabel" destination="sr5-p3-CqU" id="9se-pS-4p3"/>
+                <outlet property="dateLabel" destination="tRv-1w-AtU" id="SHQ-JP-IJE"/>
+                <outlet property="subreditLabel" destination="atz-tg-JDt" id="R1q-tj-B9F"/>
+                <outlet property="thumbnailView" destination="v7w-On-2bd" id="2an-ha-8iM"/>
+                <outlet property="titleLabel" destination="ON2-Xt-IVY" id="9t1-23-ygp"/>
+                <outlet property="usernameLabel" destination="1w0-SB-dPe" id="d2b-cY-c3y"/>
+            </connections>
+            <point key="canvasLocation" x="-203" y="208.5"/>
         </tableViewCell>
     </objects>
 </document>
